# playwrite-pytest-framework

./: .gitignore  LICENSE  README.md  config.py  conftest.py  main.py  pyproject.toml
.github/workflows/: ruff_lint.yaml
configs/: .env  dev.yaml  prod.yaml  settings.yaml
src/: base_page.py
src/drivers/: browsers_factory.py  events.py
src/locators/: input_locators.py
src/pages/: input_form.py
src/utils/: logger.py
tests/: test_1.py  test_input.py
