[tool.poetry]
name = "playwrite"
version = "0.1.0"
description = "A web automation framework using pytest and Playwright"
authors = ["Dmytro Berezovskyi <dmberezovskyi@gmail.com>"]

packages = [
    { include = "src" },
    { include = "tests" },
    { include = "config" },
    { include = "api", from = "src" },
    { include = "drivers", from = "src" },
    { include = "pages", from = "src" },
    { include = "utils", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3"
playwright = "^1.47.0"
dynaconf = "^3.2.6"
requests = "^2.31"

[tool.poetry.dev-dependencies]
ruff = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["tests"]
